--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,34 +2,75 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-<!--tools:showIn permite apontar para este layout para ele ser visualizado e editado num outro layout pai-->
+    <!--tools:showIn permite apontar para este layout para ele ser visualizado e editado num outro layout pai-->
 
-    <group android:checkableBehavior="single"> <!--Isto garante que no menu apenas um item e selecionavel de casa vez-->
+    <group
+        android:id="@+id/group1"
+        android:checkableBehavior="single"> <!--Isto garante que no menu apenas um item e selecionavel de casa vez-->
         <item
-            android:id="@+id/nav_message"
+            android:id="@+id/nav_home"
+            android:icon="@drawable/icon_person"
+            android:title="Home" />
+        <item
+            android:id="@+id/nav_recipes"
             android:icon="@drawable/icon_message"
-            android:title="Message" />
+            android:title="Recipes" />
         <item
-            android:id="@+id/nav_chat"
+            android:id="@+id/nav_fridge"
             android:icon="@drawable/icon_chat"
-            android:title="Chat" />
+            android:title="Fridge" />
+        <item
+            android:id="@+id/nav_shopping_list"
+            android:icon="@drawable/icon_person"
+            android:title="Shopping List" />
+        <item
+            android:id="@+id/nav_meal_planning"
+            android:icon="@drawable/icon_person"
+            android:title="Meal Planning" />
+        <item
+            android:id="@+id/nav_favorites"
+            android:icon="@drawable/icon_person"
+            android:title="Favorites" />
+        <item
+            android:id="@+id/nav_sugestions"
+            android:icon="@drawable/icon_person"
+            android:title="Sugestions" />
+
+    </group>
+
+    <group
+        android:id="@+id/group2"
+        android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/icon_person"
             android:title="Profile" />
+        <item
+            android:id="@+id/nav_help"
+            android:icon="@drawable/icon_person"
+            android:title="Help" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/icon_person"
+            android:title="Settings" />
     </group>
 
-    <!--Os items abaixo nao sao selecionaveis, apenas fazem uma acao-->
+    <!--Os items abaixo nao sao selecionaveis, apenas fazem uma acao
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/icon_share"
-                android:title="Share" />
+                android:id="@+id/nav_profile"
+                android:icon="@drawable/icon_person"
+                android:title="Profile" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/icon_send"
-                android:title="Send" />
+                android:id="@+id/nav_help"
+                android:icon="@drawable/icon_person"
+                android:title="Help" />
+            <item
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/icon_person"
+                android:title="Settings" />
         </menu>
-    </item>
+    </item>-->
 </menu>
