Alguns layouts feitos +/-, navegação basica feita

--- a/app/src/main/res/layout/fragment_sugestions.xml
+++ b/app/src/main/res/layout/fragment_sugestions.xml
@@ -1,14 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sugestions_my_recipes_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sugestions Fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/button_sugestions_my_recipes"
+            android:layout_width="350dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="24dp"
+            android:text="My Recipes"
+            android:textColor="#000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sugestions_friends_recipes_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/button_sugestions_friends_recipes"
+            android:layout_width="350dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="24dp"
+            android:text="Friends Recipes"
+            android:textColor="#000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sugestions_popular_recipes_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/button_sugestions_popular_recipes"
+            android:layout_width="350dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="24dp"
+            android:text="Popular Recipes"
+            android:textColor="#000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sugestions_tematic_recipes_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/button_sugestions_tematic_recipes"
+            android:layout_width="350dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="24dp"
+            android:text="Tematic Recipes"
+            android:textColor="#000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.466"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sugestions_supermarkets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/button_sugestions_supermarkets"
+            android:layout_width="350dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="24dp"
+            android:text="Supermarkets"
+            android:textColor="#000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
