--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:layout_editor_absoluteY="81dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home Fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+    <Button
+        android:id="@+id/button_home_sugestions"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="92dp"
+        android:background="@drawable/round_button"
+        android:baselineAligned="false"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Sugestions"
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_home_shopping_list"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="92dp"
+        android:background="@drawable/round_button"
+        android:baselineAligned="false"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Shopping List"
+        android:textColor="#fff"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_home_cooking"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/round_button"
+        android:baselineAligned="false"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Cooking"
+        android:textColor="#fff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_home_meal_planning"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="92dp"
+        android:background="@drawable/round_button"
+        android:baselineAligned="false"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Meal Planning"
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
