--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -18,15 +18,15 @@
         <item
             android:id="@+id/nav_fridge"
             android:icon="@drawable/icon_chat"
-            android:title="Fridge" />
+            android:title="Cooking" />
         <item
             android:id="@+id/nav_shopping_list"
             android:icon="@drawable/icon_person"
-            android:title="Shopping List" />
+            android:title="Lists" />
         <item
             android:id="@+id/nav_meal_planning"
             android:icon="@drawable/icon_person"
-            android:title="Meal Planning" />
+            android:title="Planning" />
         <item
             android:id="@+id/nav_favorites"
             android:icon="@drawable/icon_person"
