--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/toolbar_health"
+        android:icon="@drawable/icon_heart"
+        android:title="Nutrition"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/options_settings"
         android:orderInCategory="1"
         android:title="Settings"
