--- a/app/src/main/res/layout/fragment_meal_planning.xml
+++ b/app/src/main/res/layout/fragment_meal_planning.xml
@@ -4,26 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:accessibilityHeading="false"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/date_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/calendarView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <CalendarView
-        android:id="@+id/calendarView"
+        android:id="@+id/meal_planning_calendarView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="320dp"
         android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/meal_planning_temp_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"
+        android:textSize="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/meal_planning_calendarView" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="135dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/meal_planning_breakfast_button"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Button
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:drawableStart="@drawable/icon_add"
+                app:layout_constraintEnd_toEndOf="@+id/meal_planning_dinner_button"
+                app:layout_constraintTop_toTopOf="@+id/meal_planning_dinner_button" />
+
+            <ImageButton
+                android:id="@+id/meal_planning_lunch_button"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Button
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:drawableStart="@drawable/icon_add"
+                android:gravity="center"
+                app:layout_constraintEnd_toEndOf="@+id/meal_planning_breakfast_button"
+                app:layout_constraintTop_toTopOf="@+id/meal_planning_breakfast_button" />
+
+            <ImageButton
+                android:id="@+id/meal_planning_dinner_button"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:drawableStart="@drawable/icon_add"
+                app:layout_constraintEnd_toEndOf="@+id/meal_planning_lunch_button"
+                app:layout_constraintTop_toTopOf="@+id/meal_planning_lunch_button" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
