--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_bright">
 
+    <!--androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recipes_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/-->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
