--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -52,14 +52,15 @@
                 android:id="@+id/lists_shopping_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:fontFamily="sans-serif-medium"
+                android:paddingLeft="40dp"
                 android:text="Shopping List"
                 android:textColor="#000"
                 android:textSize="20dp"
-                android:paddingLeft="40dp"
-                android:fontFamily="sans-serif-medium"
-                app:layout_constraintTop_toBottomOf="@id/lists_buttons_layout"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/lists_buttons_layout" />
 
             <Button
                 android:layout_width="50dp"
