Time Picker feito

--- a/app/src/main/res/layout/fragment_fridge.xml
+++ b/app/src/main/res/layout/fragment_fridge.xml
@@ -11,4 +11,10 @@
         android:textSize="30sp"
         android:layout_centerInParent="true"/>
 
+    <Button
+        android:id="@+id/button_fridge_options_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Options"/>
+
 </RelativeLayout>
