--- a/app/src/main/res/layout/fragment_sugestions_supermarket.xml
+++ b/app/src/main/res/layout/fragment_sugestions_supermarket.xml
@@ -25,6 +25,7 @@
             android:orientation="vertical">
 
             <CheckBox
+                android:id="@+id/supermarket_checkbox1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -45,6 +46,7 @@
             android:orientation="vertical">
 
             <CheckBox
+                android:id="@+id/supermarket_checkbox2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -65,27 +67,7 @@
             android:orientation="vertical">
 
             <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:scaleX="1.3"
-                android:scaleY="1.3" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/icon_add" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <CheckBox
+                android:id="@+id/supermarket_checkbox3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -107,6 +89,7 @@
             android:orientation="vertical">
 
             <CheckBox
+                android:id="@+id/supermarket_checkbox4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -128,6 +111,29 @@
             android:orientation="vertical">
 
             <CheckBox
+                android:id="@+id/supermarket_checkbox5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleX="1.3"
+                android:scaleY="1.3" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/icon_add" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/supermarket_checkbox6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -153,13 +159,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
-    <!--androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapView" /-->
+        app:layout_constraintTop_toBottomOf="@+id/sugestions_supermarket_mapView">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:text="Promoções"
+            android:textColor="#000" />
+
+        <!--androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/supermarket_promotions_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"/-->
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
