Primeiro recycler view

--- a/app/src/main/res/layout/fragment_sugestions.xml
+++ b/app/src/main/res/layout/fragment_sugestions.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/sugestoes">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sugestions_my_recipes_layout"
@@ -13,11 +15,14 @@
 
         <Button
             android:id="@+id/button_sugestions_my_recipes"
-            android:layout_width="350dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="387dp"
+            android:layout_height="73dp"
+            android:layout_marginTop="14dp"
             android:text="My Recipes"
-            android:textColor="#000"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:textColor="#FFF"
+            android:background="@color/caldroid_transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,11 +36,14 @@
 
         <Button
             android:id="@+id/button_sugestions_friends_recipes"
-            android:layout_width="350dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="387dp"
+            android:layout_height="73dp"
+            android:layout_marginTop="17dp"
             android:text="Friends Recipes"
-            android:textColor="#000"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:textColor="#FFF"
+            android:background="@color/caldroid_transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,11 +58,14 @@
 
         <Button
             android:id="@+id/button_sugestions_popular_recipes"
-            android:layout_width="350dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="387dp"
+            android:layout_height="73dp"
+            android:layout_marginTop="17dp"
             android:text="Popular Recipes"
-            android:textColor="#000"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:textColor="#FFF"
+            android:background="@color/caldroid_transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,11 +80,14 @@
 
         <Button
             android:id="@+id/button_sugestions_tematic_recipes"
-            android:layout_width="350dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="387dp"
+            android:layout_height="73dp"
+            android:layout_marginTop="13dp"
             android:text="Tematic Recipes"
-            android:textColor="#000"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:textColor="#FFF"
+            android:background="@color/caldroid_transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,11 +102,14 @@
 
         <Button
             android:id="@+id/button_sugestions_supermarkets"
-            android:layout_width="350dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="387dp"
+            android:layout_height="73dp"
+            android:layout_marginTop="15dp"
             android:text="Supermarkets"
-            android:textColor="#000"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:textColor="#FFF"
+            android:background="@color/caldroid_transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
